--- a/noi.html
+++ b/noi.html
@@ -435,7 +435,7 @@
   }
 </script>
 
-<script id="ch105/01" type="111">
+<script id="ch0105/01" type="111">
   var n = +prompt()
   var y = 0
   for (var i = 0; i < n; i++) {
@@ -445,7 +445,7 @@
   console.log((y / n).toFixed(2))
 </script>
 
-<script id="ch105/02" type="111">
+<script id="ch0105/02" type="111">
   var y = 0
   for (var i = 0; i < 12; i++) {
     var x = +prompt()
@@ -455,7 +455,7 @@
   console.log('$' + (y / 12).toFixed(2))
 </script>
 
-<script id="ch105/03" type="111">
+<script id="ch0105/03" type="111">
   var n = prompt()
   var y = 0
   for (var i = 0; i < n; i++) {
@@ -465,7 +465,7 @@
   console.log((y / n).toFixed(4))
 </script>
 
-<script id="ch105/04" type="111">
+<script id="ch0105/04" type="111">
   var n = +prompt()
   var y = 0
   for (var i = 0; i < n; i++) {
@@ -475,7 +475,7 @@
   console.log(y , (y / n).toFixed(5))
 </script>
 
-<script id="ch105/05" type="111">
+<script id="ch0105/05" type="111">
   var n = +prompt()
   var y = 0
   for (var i = 0; i < n; i++) {
@@ -487,7 +487,7 @@
   console.log(y)
 </script>
 
-<script id="ch105/06" type="111">
+<script id="ch0105/06" type="111">
   var n = +prompt()
   var max = 0
   var min = 99999999
@@ -503,7 +503,7 @@
   console.log(max - min)
 </script>
 
-<script id="ch105/07" type="111">
+<script id="ch0105/07" type="111">
   var n = +prompt()
   var j1 = 0
   var y1 = 0
@@ -519,7 +519,7 @@
   console.log(j1, y1, t1, j1 + y1 + t1)
 </script>
 
-<script id="ch105/08" type="111">
+<script id="ch0105/08" type="111">
   var n = +prompt();
   var i = 0
   var x
@@ -532,7 +532,7 @@
   console.log((n - 2) * 180 - y);
 </script>
 
-<script id="ch105/09" type="111">
+<script id="ch0105/09" type="111">
   var m = +prompt(),
       n = +prompt(),
       num = 0
@@ -548,7 +548,7 @@
   console.log(num);
 </script>
 
-<script id="ch105/10" type="111">
+<script id="ch0105/10" type="111">
   var m = +prompt(),
       n = +prompt(),
       num = 0
@@ -561,7 +561,7 @@
   console.log(num);
 </script>
 
-<script id="ch105/11" type="111">
+<script id="ch0105/11" type="111">
   var k = +prompt(),
       k0
       num = 0,
@@ -584,7 +584,7 @@
   console.log(k10)
 </script>
 
-<script id="ch105/12" type="111">
+<script id="ch0105/12" type="111">
   var n = +prompt(),
       m = +prompt()
       num = 0,
@@ -599,7 +599,7 @@
   console.log(k1)
 </script>
 
-<script id="ch105/13" type="111">
+<script id="ch0105/13" type="111">
   var a = +prompt(),
       n = +prompt()
       num = 0
@@ -609,7 +609,7 @@
   console.log(num)
 </script>
 
-<script id="ch105/14" type="111">
+<script id="ch0105/14" type="111">
   var x = +prompt(),
       n = +prompt(),
       i = 0,
@@ -622,7 +622,7 @@
   console.log(x.toFixed(4))
 </script>
 
-<script id="ch105/15" type="111">
+<script id="ch0105/15" type="111">
   var r = +prompt(),
       m = +prompt(),
       y = +prompt(),
@@ -634,7 +634,7 @@
   console.log(parseInt(m))
 </script>
 
-<script id="ch105/16" type="111">
+<script id="ch0105/16" type="111">
   var n = +prompt(),
     k = +prompt(),
     num = 200,
@@ -661,7 +661,7 @@
   }
 </script>
 
-<script id="ch105/17" type="111">
+<script id="ch0105/17" type="111">
   var k = +prompt(),
       pre = 1,
       next = 1,
@@ -679,7 +679,7 @@
   console.log(num)
 </script>
 
-<script id="ch105/18" type="111">
+<script id="ch0105/18" type="111">
   var n = +prompt(),
       x = +prompt(),
       y = +prompt()
@@ -698,7 +698,7 @@
   }
 </script>
 
-<script id="ch105/19" type="111">
+<script id="ch0105/19" type="111">
   var n = +prompt(),
       x2,
       y2,
@@ -718,7 +718,7 @@
   }
 </script>
 
-<script id="ch105/20" type="111">
+<script id="ch0105/20" type="111">
   var h = +prompt(),
     numble = 0
   for(var i = 0; i < 10; i++) {
@@ -730,7 +730,7 @@
   console.log(h.toFixed(7))
 </script>
 
-<script id="ch105/21" type="111">
+<script id="ch0105/21" type="111">
   var h = +prompt()
   for(var i = 0; i < h; i++) {
     if (h == 1) {
@@ -747,7 +747,7 @@
   console.log('End')
 </script>
 
-<script id="ch105/22" type="111">
+<script id="ch0105/22" type="111">
   var money1 = 0,
       money2 = 0
   for(var i = 1; i < 13; i++) {
@@ -767,7 +767,7 @@
   }
 </script>
 
-<script id="ch105/23" type="111">
+<script id="ch0105/23" type="111">
   var x = +prompt(),
     people = +prompt(),
     num = 0
@@ -782,7 +782,7 @@
   console.log(num)
 </script>
 
-<script id="ch105/24" type="111">
+<script id="ch0105/24" type="111">
   var x = +prompt(),
     num = 0
   for (var i = 0; i < x; i++) {
@@ -797,7 +797,7 @@
   console.log(num)
 </script>
 
-<script id="ch105/25" type="111">
+<script id="ch0105/25" type="111">
   for (var x = 1; x < 7; x++) {
     for (var y = 0; y < 7; y++) {
       for (var z = 0; z < 7; z++) {
@@ -811,7 +811,7 @@
   }
 </script>
 
-<script id="ch105/26" type="111">
+<script id="ch0105/26" type="111">
   var x = +prompt()
   var 计数器 = 0
   for (var i = 0; i < x; i++) {
@@ -827,7 +827,7 @@
   console.log(计数器)
 </script>
 
-<script id="ch105/27" type="111">
+<script id="ch0105/27" type="111">
   var x = +prompt()
   var n = 0
   var Sn = 0
@@ -838,7 +838,7 @@
   console.log(n)
 </script>
 
-<script id="ch105/28" type="111">
+<script id="ch0105/28" type="111">
   var x = +prompt()
   var y = ''
   do {
@@ -848,7 +848,7 @@
   console.log(y)
 </script>
 
-<script id="ch105/29" type="111">
+<script id="ch0105/29" type="111">
   var x = +prompt()
   var y = ''
   if (x > 0) {
@@ -869,7 +869,7 @@
   }
 </script>
 
-<script id="ch105/30" type="111">
+<script id="ch0105/30" type="111">
   var x = +prompt()
   var y = +prompt()
   var c
@@ -897,7 +897,7 @@
   }
 </script>
 
-<script id="ch105/31" type="111">
+<script id="ch0105/31" type="111">
   var N = +prompt()
   var M = +prompt()
       w = 1
@@ -915,7 +915,7 @@
   console.log(w)
 </script>
 
-<script id="ch105/32" type="111">
+<script id="ch0105/32" type="111">
   var n = +prompt()
   var pre = 1
   var next = 2
@@ -930,7 +930,7 @@
   console.log(q.toFixed(4))
 </script>
 
-<script id="ch105/33" type="111">
+<script id="ch0105/33" type="111">
   var n = +prompt()
   var x = -1
   var num = 0
@@ -947,7 +947,7 @@
   console.log(num.toFixed(4))
 </script>
 
-<script id="ch105/34" type="111">
+<script id="ch0105/34" type="111">
   var n = +prompt()
   var num = 1
   var num1 = 0
@@ -958,7 +958,7 @@
   console.log(num1)
 </script>
 
-<script id="ch105/35" type="111">
+<script id="ch0105/35" type="111">
   var n = +prompt()
   var num = 1
   var num1 = 1
@@ -969,7 +969,7 @@
   console.log(num1.toFixed(10))
 </script>
 
-<script id="ch105/36" type="111">
+<script id="ch0105/36" type="111">
   var x = +prompt(),
       n = +prompt(),
       num = 0
@@ -979,7 +979,7 @@
   console.log((num + 1).toFixed(2))
 </script>
 
-<script id="ch105/37" type="111">
+<script id="ch0105/37" type="111">
   var M = +prompt(),
   N = +prompt(),
   X = +prompt(),
@@ -999,9 +999,9 @@
   console.log(N)
 </script>
 
-<script id="ch105/38" type="111"></script>
+<script id="ch0105/38" type="111"></script>
 
-<script id="ch105/39" type="111">
+<script id="ch0105/39" type="111">
   var n = +prompt()
   var num = 0
   for (var i = 0; i <= n; i++) {
@@ -1012,7 +1012,7 @@
   console.log(num)
 </script>
 
-<script id="ch105/40" type="111">
+<script id="ch0105/40" type="111">
   var n = +prompt(),
     num = 0;
   for (i = 1; i <= n; i++) {
@@ -1027,7 +1027,7 @@
   console.log(num);
 </script>
 
-<script id="ch105/41" type="111">
+<script id="ch0105/41" type="111">
   var L = +prompt(),
       R = +prompt(),
     num = 0;
@@ -1043,7 +1043,7 @@
   console.log(num);
 </script>
 
-<script id="ch105/42" type="111">
+<script id="ch0105/42" type="111">
   var weight = prompt(),
     height = prompt(),
     符号 = prompt(),
@@ -1079,7 +1079,7 @@
   }
 </script>
 
-<script id="ch105/43" type="111">
+<script id="ch0105/43" type="111">
   var n = +prompt()
   for (i = 0; i < n; i++) {
     if (((i % 2 === 0 || i % 5 === 0 || i % 3 === 0 || i === 1 || i === 0 || i < 0)) && i !== 5 && i !== 2 && i !== 3 ? false : true) {
@@ -1096,7 +1096,7 @@
   }
 </script>
 
-<script id="ch105/44" type="111">
+<script id="ch0105/44" type="111">
   var n = +prompt(),
     num = 0
   for (i = 0; i <= 10000; i++) {
@@ -1109,7 +1109,7 @@
   }
 </script>
 
-<script id="ch105/45" type="111">
+<script id="ch0105/45" type="111">
   var day = +prompt()
   var 工资 = 0
   var gold = 1
@@ -1175,7 +1175,7 @@
 
 <script id="weekday" type="111"></script>
 
-<script id="complete-number" type="111">
+<script id="complete-numbers" type="111">
   var n = prompt(),
       计数 = 0
   for (i = 1; i <= n; i++) {
