--- a/noi.html
+++ b/noi.html
@@ -732,7 +732,7 @@
 
 <script id="ch0105/21" type="111">
   var h = +prompt()
-  for(var i = 0; i < h; i++) {
+  for(var i = 0; i <= h; i++) {
     if (h == 1) {
       break;
     } else if (h % 2 != 0) {
@@ -845,7 +845,7 @@
     y += x % 10 + ''
     x = parseInt(x / 10)
   } while(x != 0)
-  console.log(y)
+  console.log(y.trim())
 </script>
 
 <script id="ch0105/29" type="111">
@@ -1175,7 +1175,7 @@
 
 <script id="weekday" type="111"></script>
 
-<script id="complete-numbers" type="111">
+<script id="complete-number" type="111">
   var n = prompt(),
       计数 = 0
   for (i = 1; i <= n; i++) {
