--- a/noi.html
+++ b/noi.html
@@ -1206,6 +1206,21 @@
   }
 </script>
 
+<script id="complete-numbers" type="111">
+  for (i = 1; i <= 1000; i++) {
+    var 计数 = 0
+    for (j = 1; j < i; j++) {
+      if (i % j == 0) {
+        计数 = 计数 + j
+      }
+    }
+    if (计数 == i) {
+      console.log(i)
+    }
+  }
+
+</script>
+
 <script id="prime" type="111">
   var x = +prompt()
   console.log(((x % 2 === 0 || x % 5 === 0 || x % 3 === 0 || x === 1 || x === 0 || x < 0)) && x !== 5 && x !== 2 && x !== 3 ? 'NO' : 'YES');
