--- a/noi.html
+++ b/noi.html
@@ -1228,7 +1228,7 @@
 
 <script id="primes" type="111">
   for (x = 0; x <= 100; x++) {
-    if (((x % 2 == 0 || x % 5 == 0 || x % 7 == 0 ||x % 3 == 0 || x == 1 || x == 0 || x < 0)) && x != 5 && x != 2 && x != 3 ? false : true) {
+    if (((x % 2 == 0 || x % 5 == 0 || x % 7 == 0 ||x % 3 == 0 || x == 1 || x == 0 || x < 0)) && x != 5 && x != 2 && x != 3 && x != 7 ? false : true) {
       console.log(x)
     }
   }
