--- a/solar-system.html
+++ b/solar-system.html
@@ -6,14 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    body {
+      background-color: rgba(0, 0, 0, .9);
+    }
+
     .sun {
       position: relative;
       margin-left: 50%;
       margin-top: 250px;
       border-radius: 999px;
-      width: 80px;
-      height: 80px;
+      width: 100px;
+      height: 100px;
       background-color: tomato;
+      box-shadow: 0 0 10px tomato, 0 0 10px tomato, 0 0 10px tomato;
     }
 
     .earth {
@@ -21,9 +26,10 @@
       border-radius: 999px;
       width: 60px;
       height: 60px;
-      margin-top: 10px;
-      margin-left: 10px;
+      margin-top: 20px;
+      margin-left: 20px;
       background-color: blue;
+      box-shadow: 0 0 5px gray;
     }
 
     .moon {
@@ -34,6 +40,7 @@
       margin-top: 10px;
       margin-left: 10px;
       background-color: gray;
+      box-shadow: 0 0 10px gray;
     }
   </style>
 </head>
@@ -51,8 +58,8 @@
     function animate(time) {
       地球.style.top = Math.sin(角度) * 200 + 'px'
       地球.style.left = Math.cos(角度) * 200 + 'px'
-      月亮.style.top = Math.sin(2 * 角度) * 60 + 'px'
-      月亮.style.left = Math.cos(2 * 角度) * 60 + 'px'
+      月亮.style.top = Math.sin(2 * 角度) * 70 + 'px'
+      月亮.style.left = Math.cos(2 * 角度) * 70 + 'px'
       角度 += 0.005
       requestAnimationFrame(animate)
     }
