--- a/solar-system.html
+++ b/solar-system.html
@@ -8,63 +8,158 @@
   <style>
     body {
       background-color: rgba(0, 0, 0, .9);
+      overflow: hidden;
     }
 
     .sun {
-      position: relative;
-      margin-left: 50%;
-      margin-top: 250px;
-      border-radius: 999px;
-      width: 100px;
-      height: 100px;
-      background-color: tomato;
-      box-shadow: 0 0 10px tomato, 0 0 10px tomato, 0 0 10px tomato;
+      width: 200px;
+      background-color: goldenrod;
+      animation: diffusion 2s infinite;
+      box-shadow: 0 0 30px goldenrod;
     }
 
     .earth {
-      position: absolute;
-      border-radius: 999px;
-      width: 60px;
-      height: 60px;
-      margin-top: 20px;
-      margin-left: 20px;
+      width: 80px;
       background-color: blue;
-      box-shadow: 0 0 5px gray;
+      box-shadow: 0 0 5px blue;
     }
 
     .moon {
-      position: absolute;
-      border-radius: 999px;
-      width: 40px;
-      height: 40px;
-      margin-top: 10px;
-      margin-left: 10px;
+      width: 50px;
       background-color: gray;
       box-shadow: 0 0 10px gray;
+    }
+
+    span {
+      position: fixed;
+      display: inline-block;
+      border-radius: 999px;
+      transform: translate(-50%, -50%);
+      aspect-ratio: 1 / 1;
+      z-index: 999;
+    }
+
+    .q {
+      background-color: rgb(146, 144, 144);
+      box-shadow: 0 0 5px rgb(146, 144, 144);
+    }
+
+    span::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      backdrop-filter: blur(1px);
+    }
+
+    #star-container {
+      width: 100%;
+      height: 100%;
+    }
+
+    .star {
+      position: absolute;
+      width: 2px;
+      background-color: #fff;
+      border-radius: 50%;
+      animation: twinkling 1s infinite;
+      aspect-ratio: 1 / 1;
+      opacity: 0;
+    }
+
+    @keyframes twinkling {
+      0% {
+        opacity: 0;
+      }
+
+      50% {
+        opacity: 1;
+      }
+
+      100% {
+        opacity: 0;
+      }
+    }
+
+    @keyframes diffusion {
+      0% {
+        box-shadow: 0 0 30px goldenrod;
+      }
+
+      12.5% {
+        box-shadow: 0 0 35px goldenrod;
+      }
+
+      25% {
+        box-shadow: 0 0 40px goldenrod;
+      }
+
+      37.5% {
+        box-shadow: 0 0 45px goldenrod;
+      }
+
+      50% {
+        box-shadow: 0 0 50px goldenrod;
+      }
+
+      62.5% {
+        box-shadow: 0 0 45px goldenrod;
+      }
+
+      75% {
+        box-shadow: 0 0 40px goldenrod;
+      }
+
+      87.5% {
+        box-shadow: 0 0 35px goldenrod;
+      }
+
+      100% {
+        box-shadow: 0 0 30px goldenrod;
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="sun">
-    <div class="earth">
-      <div class="moon"></div>
-    </div>
-  </div>
-  <script>
-    let 地球 = document.querySelector('.earth')
-    let 月亮 = document.querySelector('.moon')
-    let 角度 = 0
-    function animate(time) {
-      地球.style.top = Math.sin(角度) * 200 + 'px'
-      地球.style.left = Math.cos(角度) * 200 + 'px'
-      月亮.style.top = Math.sin(2 * 角度) * 70 + 'px'
-      月亮.style.left = Math.cos(2 * 角度) * 70 + 'px'
-      角度 += 0.005
-      requestAnimationFrame(animate)
-    }
-    requestAnimationFrame(animate)
-  </script>
+  <span class="sun"></span>
+  <span class="earth"></span>
+  <span class="moon"></span>
+  <div id="star-container"></div>
 </body>
+<script>
+  let sun = document.querySelector('.sun'),
+    earth = document.querySelector('.earth'),
+    moon = document.querySelector('.moon'),
+    starContainer = document.querySelector('#star-container'),
+    earthAngle = 0, moonAngle = 0,
+    sum = 0
+  function animate(time) {
+    sun.style.top = window.innerHeight / 2 + 'px'
+    sun.style.left = window.innerWidth / 2 + 'px'
+    earth.style.top = parseInt(sun.style.top) + Math.sin(earthAngle) * 300 + 'px'
+    earth.style.left = parseInt(sun.style.left) + Math.cos(earthAngle) * 300 + 'px'
+    moon.style.top = parseInt(earth.style.top) + Math.sin(2 * moonAngle) * 100 + 'px'
+    moon.style.left = parseInt(earth.style.left) + Math.cos(2 * moonAngle) * 100 + 'px'
+    earthAngle += 0.005
+    moonAngle -= 0.005
+    if (sum <= 400) createStar()
+    sum++
+    requestAnimationFrame(animate)
+  }
+  requestAnimationFrame(animate)
+
+  function createStar() {
+    let star = document.createElement("div")
+    star.classList.add("star")
+    star.style.width = Math.random() * (3 - 1) + 1 + 'px'
+    star.style.left = Math.random() * 100 + "%"
+    star.style.top = Math.random() * 100 + "%"
+    star.style.animationDelay = Math.random() * 5 + "s"
+    starContainer.appendChild(star)
+  }
+</script>
 
 </html>
