--- a/todu-vue.html
+++ b/todu-vue.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <script src="./vue-2.7.14.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.min.js"></script>
   <script>
     var app = new Vue({
       el: '.container',
